force-app/main/default/objects/Contact/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Jurídico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>