force-app/main/default/objects/Contact/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nome da empresa informado, relacionado com o campo de lead</description>
    <inlineHelpText>Nome da empresa informado, relacionado com o campo de lead</inlineHelpText>
    <label>Empresa</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contatos</relationshipLabel>
    <relationshipName>Contatos</relationshipName>
    <type>Lookup</type>
</CustomField>