force-app/main/default/objects/Contact/fields/ExternalContactID__c.field-meta.xml
<CustomField>
    <fullName>ExternalContactID__c</fullName>
    <externalId>true</externalId>
    <label>External Contact ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>