force-app/main/default/objects/Contact/fields/FinancialContactEmail__c.field-meta.xml
<CustomField>
    <fullName>FinancialContactEmail__c</fullName>
    <description>E-mail do responsável por assuntos financeiros da empresa.</description>
    <inlineHelpText>E-mail do responsável por assuntos financeiros da empresa.</inlineHelpText>
    <label>E-mail do contato financeiro</label>
    <type>Email</type>
</CustomField>