force-app/main/default/objects/Contact/fields/FinancialContactName__c.field-meta.xml
<CustomField>
    <fullName>FinancialContactName__c</fullName>
    <description>Nome do responsável por assuntos financeiros da empresa.</description>
    <inlineHelpText>Nome do responsável por assuntos financeiros da empresa.</inlineHelpText>
    <label>Nome do contato financeiro</label>
    <length>150</length>
    <type>Text</type>
</CustomField>