force-app/main/default/objects/Contact/fields/FinancialContactPhone__c.field-meta.xml
<CustomField>
    <fullName>FinancialContactPhone__c</fullName>
    <description>Telefone do responsável por assuntos financeiros da empresa.</description>
    <inlineHelpText>Telefone do responsável por assuntos financeiros da empresa.</inlineHelpText>
    <label>Telefone do contato financeiro</label>
    <type>Phone</type>
</CustomField>