force-app/main/default/objects/Contact/fields/FinWid__c.field-meta.xml
<CustomField>
    <fullName>FinWid__c</fullName>
    <formula>RIGHT(nitzap20__WhatsAppId__c, 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final WhatsApp Id</label>
    <type>Text</type>
</CustomField>