force-app/main/default/objects/Contact/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <externalId>true</externalId>
    <label>Key Account</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>