force-app/main/default/objects/Contact/fields/Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_Contact__c</fullName>
    <externalId>true</externalId>
    <label>Key Contact</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>