force-app/main/default/objects/Contact/fields/leadScoring__Total_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>leadScoring__Total_Lead_Score__c</fullName>
    <description>Value from the converted lead</description>
    <formula>leadScoring__Lead_Score__c + leadScoring__Campaign_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>