force-app/main/default/objects/Contact/fields/MarketingContactEmail__c.field-meta.xml
<CustomField>
    <fullName>MarketingContactEmail__c</fullName>
    <description>E-mail do responsável pela interface com a produação de campanhas.</description>
    <inlineHelpText>E-mail do responsável pela interface com a produação de campanhas.</inlineHelpText>
    <label>E-mail do contato de marketing</label>
    <type>Email</type>
</CustomField>