force-app/main/default/objects/Contact/fields/MarketingContactName__c.field-meta.xml
<CustomField>
    <fullName>MarketingContactName__c</fullName>
    <description>Nome do responsável pela interface com a produação de campanhas.</description>
    <inlineHelpText>Nome do responsável pela interface com a produação de campanhas.</inlineHelpText>
    <label>Nome do contato de marketing</label>
    <length>150</length>
    <type>Text</type>
</CustomField>