force-app/main/default/objects/Contact/fields/MarketingContactPhone__c.field-meta.xml
<CustomField>
    <fullName>MarketingContactPhone__c</fullName>
    <description>Celular do responsável pela interface com a produação de campanhas.</description>
    <inlineHelpText>Celular do responsável pela interface com a produação de campanhas.</inlineHelpText>
    <label>Telefone do contato marketing</label>
    <type>Phone</type>
</CustomField>