force-app/main/default/objects/Contact/fields/nitzap20__DateTime_Last_Sent_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>nitzap20__DateTime_Last_Sent_Whatsapp__c</fullName>
    <label>Nitzap Date Time Last Sent Whatsapp</label>
    <type>DateTime</type>
</CustomField>