force-app/main/default/objects/Contact/fields/Tipo_de_Contato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contato__c</fullName>
    <label>Tipo de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Juridico</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>