force-app/main/default/objects/Contact/listViews/NAO_ALTERAR_Todas_as_contas_Parabola.listView-meta.xml
<ListView>
    <fullName>NAO_ALTERAR_Todas_as_contas_Parabola</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>(NAO ALTERAR) Todos Parabola</label>
    <sharedTo>
        <group>Parabola</group>
    </sharedTo>
</ListView>